Add theme for testing and backend prod ready setup

--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -10,33 +10,12 @@ services:
       MONGO_INITDB_DATABASE: ${MONGO_DATABASE}
     volumes:
       - mongo_data:/data/db
-
-  # backend:
-  #   build:
-  #     context: .
-  #   restart: unless-stopped
-  #   ports:
-  #     - "3000:3000"
-  #   environment:
-  #     MONGODB_URI: mongodb://admin:123123@mongodb:27017/basicdb?authSource=admin
-  #     PORT: 3000
-  #     NODE_ENV: development
-  #     BASE_URL: http://localhost:3000
-  #     CORS_ORIGIN: http://localhost:5173
-  #   depends_on:
-  #     - mongodb
-  #   volumes:
-  #     - ./src:/app/src
-  #     - /app/node_modules
-  #   develop:
-  #     watch:
-  #       - action: sync
-  #         path: ./src
-  #         target: /app/src
-  #         ignore:
-  #           - node_modules/
-  #       - action: rebuild
-  #         path: ./package.json
+    networks:
+      - kanbox_network
 
 volumes:
   mongo_data:
+
+networks:
+  kanbox_network:
+    name: kanbox_network
