--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -14,5 +14,5 @@ COPY . .
 # Expose port
 EXPOSE 3000
 
-# Start server
-CMD ["npm", "run", "dev"]
+# Start server (production mode)
+CMD ["npm", "start"]
